--- a/Hierarchical_VAE_Complete.ipynb
+++ b/Hierarchical_VAE_Complete.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPZIR1sIb40k+gmacKr5/Ku",
+      "authorship_tag": "ABX9TyMxNo3t7twVHB0muyq+qlVf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,8 +39,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- This is the most theoretically interesting for emergent representation learning\n",
-        " -Stochastic bottleneck forces the model to develop a compressed “language” rather than just memorising patterns.\n",
+        "- Theoretical for emergent representation learning\n",
+        "- Stochastic bottleneck forces the model to develop a compressed “language” rather than just memorising pattern\n",
         "\n",
         "- Complete Colab Notebook: Hierarchical VAE for Emergent Representation Learning"
       ],
